--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
-<html ng-app>
+<html ng-app='app'>
   <head>
   	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-touch.min.js"></script>
+
+	<script src="js/app.js"></script>
+	<script src="/angular_slider/build/angular-slider.min.js"></script>
     <!-- Latest compiled and minified JavaScript 
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
   	<div class="container" ng-controller="FilterCtrl">
@@ -31,6 +35,12 @@
 						<h3 class="panel-title">{{filter.name}}</h3>
 					</div>
 					<div class="panel-body">
+						<slider
+						    ng-model="filter.value"
+						    floor="0"
+						    ceiling="100"
+						    step="1">
+						</slider>
 						{{filter.value}}
 					</div>
 				</div>
