--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		    	<h4>CSS3 filter</h4>
 		    	<!-- css out -->
 		    	<code>
-		    		{{css()}}
+		    		{{css_formatted()}}
 		    	</code>
 		    </div>    		
     	</div>
