--- a/index.html
+++ b/index.html
@@ -22,29 +22,30 @@
 	    	<p>Use sliders on the right, to style the image, css rules are generated below. For use in <em>modern</em> browsers.</p>
     	</div>
     	<div class="row">
-		    <div class="col-xs-12 col-sm-6" id="image_view">
+		    <div class="col-xs-12 col-sm-6 col-md-4" id="image_view">
 		    	<!-- image -->
 		    	<img src="http://farm4.staticflickr.com/3915/14503838952_748f7f441d_c.jpg" style="{{css()}}" />
 		    </div>  
-		    <div class="col-xs-12 col-sm-6">
+		    <div class="col-xs-12 col-sm-6 col-md-8">
 		    	<!-- filters -->
-		    	<h4>filters</h4>		    		
+		    	<h4>filters</h4>	
+		    	<div class="row">	    		
 
-	    		<div class="panel panel-default" ng-repeat="filter in filters">
-					<div class="panel-heading">
-						<h3 class="panel-title">{{filter.name}}</h3>
-					</div>
-					<div class="panel-body">
-						<slider
-						    ng-model="filter.value"
-						    floor="0"
-						    ceiling="100"
-						    step="1">
-						</slider>
-						{{filter.value}}
+		    		<div class="panel panel-default col-xs-6" ng-repeat="filter in filters">
+						<div class="panel-heading">
+							<span class="filter_title panel-title">{{filter.name}}</span><!--<input type="text" class="form-control" ng-model="filter.value"/>-->
+						</div>
+						<div class="panel-body">
+							<slider
+							    ng-model="filter.value"
+							    floor="0"
+							    ceiling="100"
+							    step="1">
+							</slider>
+							{{filter.value}}
+						</div>
 					</div>
 				</div>
-
 
 		    </div>	    	
     	</div>
