web link to readme

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
 		    <div class="col-xs-12">
 		    	<h4>CSS3 filter</h4>
 		    	<!-- css out -->
-		    	<code>
-		    		{{css_formatted()}}
-		    	</code>
+		    	<textarea class="form-control">{{css_formatted()}}</textarea>
 		    </div>    		
     	</div>
     </div>
